Centralize Preconditions